# tdrop

./: CMakeLists.txt  ProjectHome.md  WindowsCompilation.md  systray.cpp  systray.h  systray.pro
cmake/: FindLog4Cxx.cmake  FindPTHREAD.cmake
shttpd/: .project  CMakeLists.txt  Makefile  compat_unix.h  compat_win32.h
tags/1.5/tdcommon/: .cdtbuild  .project  address.h  debugmacro.h  row.cpp  selectFile.cpp  selectFile.h  tdParam.cpp
tags/1.5/tdcommon/Release/: makefile  row.d  subdir.mk
tags/1.5/tdcommon/Release/net/: getHttp.d
tags/1.5/tdcommon/Release/regexp/: subdir.mk
tags/1.5/tdcommon/Release/xml/: nodeDoc.d  xmlFile.d
tags/1.5/tdcommon/regexp/: regExp.cpp  regExp.h
tags/1.5/tdcommon/xml/: nodeDoc.h  xmlFile.cpp
tags/1.5/tdconsole/: .cdtbuild
tags/1.5/tddaemonclient/: WebInterface-shell
tags/1.5/tdengines/: config.xml
tags/1.5/tdengines/xml/: aefdmoz.xml  aleria.xml  altavistafr.xml  archive.xml  blinkx.xml  citebase.xml  dogpile.xml  dogpileimg.xml  ebooksportal.xml  filewatcher.xml  ftpindexer.xml  googleapi.xml  googleapifr.xml  searchforvideo.xml  voilafr.xml  yahoo.xml  yahoofr.xml
tags/1.5/tdgui/control/: qInsertEvent.h  searchManager.cpp  searchResults.cpp
tags/1.5/tdgui/view/: prefDialog.h  qResultsDelegate.cpp  teardrop.ui
tags/1.5/tdresults/: openSave.cpp  openSave.h  validPages.h
tags/1.5/tdwrapper/: metaRank.h  pageParser.h
tdcommon/: .cdtbuild  .project  CMakeLists.txt  debugmacro.h  engineResults.cpp  engineResults.h  row.cpp  row.h  rowContainer.h  selectFile.cpp  selectFile.h  tdExcp.h  tdParam.cpp  tdParam.h
tdcommon/Release/: engineResults.d  sources.mk  tdParam.d
tdcommon/Release/xml/: subdir.mk  xmlEngine.d
tdcommon/net/: getHttp.cpp  getHttp.h  rawContainer.h
tdcommon/regexp/: regExp.cpp
tdcommon/threads/: threadPool.h
tdcommon/xml/: nodeDoc.cpp  nodeDoc.h  xmlEngine.cpp  xmlEngine.h  xmlFile.cpp  xmlFile.h
tdconsole/: .cdtbuild  .project  CMakeLists.txt  teardrop.cpp
tddaemon/: .cdtbuild  .project  CMakeLists.txt  Makefile  UIDSession.cpp  UIDSession.h  daemon.cpp  tddaemon.cpp  tddaemon.h  users.cpp  users.h
tddaemonclient/: .classpath  WebInterface-compile
tddaemonclient/src/com/teardrop/: WebInterface.gwt.xml
tddaemonclient/src/com/teardrop/client/: EditTree.java  EngineTree.java  JSONFunctions.java  Login.java  (+4 more)
tdengines/: .project  config.xml  teardrop_1_0.xsd  updates.xml
tdengines/xml/: aleria.xml  alltheweb.xml  allthewebfr.xml  altavista.xml  altavistafr.xml  aolvideo.xml  archive.xml  arxiv.xml  ask.xml  dmoz.xml  dogpile.xml  dogpileimg.xml  easybourse-forums.xml  exalead.xml  filemirrors.xml  filesearching.xml  filewatcher.xml  ftpindexer.xml  google.xml  googleapifiles.xml  googlefr.xml  isohunt.xml  livesearch.xml  livesearchfr.xml  lookforbook.xml  packetnews.xml  searchforvideo.xml  yahoofiles.xml  yahooimg.xml
tdgui/: .project  teardrop.pro
tdgui/control/: qHideEvent.h  rawUrl.cpp  searchResults.h
tdresults/: openSave.cpp  openSave.h  validPages.cpp  validPages.h
tdsystray/: CMakeLists.txt  daemonThread.cpp  daemonThread.h  main.cpp  prefDialog.cpp  preferences.ui  systray.cpp  systray.h  systray.pro  systray.qrc
tdwrapper/: .project  CMakeLists.txt  metaRank.cpp  metaRank.h  pageParser.cpp  pageParser.h
trunk/: .project  CMakeLists.txt  main.cpp  teardrop.pro
trunk/cmake/: FindGWT.cmake  FindICONV.cmake  FindWS2_32.cmake
trunk/control/: searchManager.h
trunk/shttpd/: CMakeLists.txt  Makefile  compat_win32.h  md5.h
trunk/tdcommon/: .cdtbuild  CMakeLists.txt  address.h  debugmacro.h  engineResults.cpp  engineResults.h  row.cpp  row.h  rowContainer.cpp  selectFile.cpp  selectFile.h  sha1.cpp  sha1.h  tdExcp.h  tdParam.cpp  tdParam.h
trunk/tdcommon/Release/: selectFile.d
trunk/tdcommon/Release/net/: subdir.mk
trunk/tdcommon/Release/regexp/: regExp.d
trunk/tdcommon/net/: getHttp.cpp  getHttp.h  rawContainer.h
trunk/tdcommon/regexp/: regExp.cpp  regExp.h
trunk/tdcommon/threads/: threadPool.h
trunk/tdcommon/xml/: nodeDoc.cpp  nodeDoc.h  xmlEngine.cpp  xmlEngine.h  xmlFile.cpp  xmlFile.h
trunk/tdconsole/: .cdtbuild  .project  CMakeLists.txt  teardrop.cpp
trunk/tddaemon/: CMakeLists.txt  Makefile  UIDSession.cpp  UIDSession.h  daemon.c  daemon.cpp  tddaemon.cpp  tddaemon.h  users.cpp  users.h
trunk/tddaemonclient/: .classpath  .project  CMakeLists.txt  WebInterface-compile  WebInterface-shell  WebInterface.launch
trunk/tddaemonclient/src/com/teardrop/: WebInterface.gwt.xml
trunk/tddaemonclient/src/com/teardrop/client/: EditTree.java  EngineTree.java  JSONFunctions.java  OnSearchSubmit.java  PerformSearch.java  QueryButton.java  WebInterface.java
trunk/tddaemonclient/src/com/teardrop/public/: WebInterface.html  teardrop.css
trunk/tdengines/: config.xml  updates.xml
trunk/tdengines/xml/: aefdmoz.xml  alltheweb.xml  allthewebfr.xml  altavista.xml  aolvideo.xml  arxiv.xml  askfr.xml  blinkx.xml  citebase.xml  citeseer.xml  dmoz.xml  dogpileimg.xml  ebooksportal.xml  filemirrors.xml  filesearching.xml  fileslt.xml  findfiles.xml  googleapi.xml  googleapifiles.xml  googleapifr.xml  googlefiles.xml  googlefr.xml  livesearch.xml  livesearchfr.xml  lookforbook.xml  metaftp.xml  napalm.xml  packetnews.xml  ramblerftp.xml  voilafr.xml  yahoo.xml  yahoofiles.xml  yahoofr.xml  yahooimg.xml  yahoovideo.xml  youtube.xml
trunk/tdgui/: .project  tdgui.cpp  teardrop.pro
trunk/tdgui/control/: rawUrl.h  resultsColumns.h
trunk/tdgui/view/: myWindow.h  prefDialog.cpp  qResultsDelegate.h  treeManager.h
trunk/tdgui/view/icons/: folder_html.xpm
trunk/tdresults/: .cdtbuild  .project  CMakeLists.txt  openSave.cpp  openSave.h  validPages.cpp
trunk/tdsystray/: daemonThread.cpp  daemonThread.h  main.cpp  systray.cpp  systray.h  systray.pro  systray.qrc
trunk/tdwrapper/: .cdtbuild  metaRank.cpp  metaRank.h  pageParser.cpp  pageParser.h
trunk/view/: myWindow.cpp  preferences.ui  qResultsDelegate.cpp  qResultsDelegate.h
trunk/view/icons/: page.xpm
view/: tdres.qrc  treeManager.cpp
view/icons/: search.xpm  xmag.xpm
wiki/: WindowsCompilation.wiki
(+5 files in other folders)
